# zcord

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260325_000001_initial.py  20260326_000002_message_receipts.py  20260404_000002_server_invites.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/middleware/: cors.py  csrf.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  attachment.py  channel.py  friend.py  member.py  message.py  role.py  server.py  server_invite.py  user.py
backend/app/routers/: __init__.py  auth.py  channels.py  deps.py  friends.py  invites.py  media.py  messages.py  servers.py  users.py  voice.py
backend/app/schemas/: auth.py  base.py  channel.py  friend.py  invite.py  media.py  message.py  server.py  user.py
backend/app/services/: auth_service.py  channel_access_service.py  encryption_service.py  invite_service.py  media_service.py  message_service.py  notification_service.py  permission_service.py  presence_service.py  token_revocation_service.py
backend/app/utils/: jwt_utils.py  password.py  validators.py
backend/app/websocket/: events.py  handlers.py  manager.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_messages.py  test_permissions.py  test_websocket.py
certs/: README.md
client/: electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
(+57 files in other folders)
